# monitora

./: .black  .flake8  .gitignore  .isort  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  Makefile  README.md  docker-compose locust.yml  docker-compose.yml  docker-entrypoint.sh  poetry.toml  pyproject.toml  pytest.ini
api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/management/commands/: dumpmovies.py
api/migrations/: 0001_initial.py
monitora/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
templates/: detail.html  index.html  login.html
templates/detail/: actor.html  actor_list.html  actor_listt.html  movie.html  movie_list.html
test_perf/: test_api.py
tests/: __init__.py  _test_command.py  _test_sites.py  _test_user.py  conftest.py  initial_test_data.json  test_api.py  test_command.py  test_movies.py  test_site.py  test_sites.py
